The commit message was empty